# feaweld

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.fenics  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
deploy/: feaweld-twin.service
docs/: CONCEPTS.md  VISUALIZATION_GUIDE.md  cli-reference.md  deployment.md  getting-started.md  index.md  installation.md  orchestration.md  quickstart.md
docs/api/: core-types.md  core.md  digital_twin.md  fatigue.md  geometry.md  index.md  materials.md  mesh.md  ml.md  multiscale.md  pipeline.md  postprocess.md  probabilistic.md  singularity.md  solver.md  visualization.md
docs/diagrams/: active_learning_loop.mmd  architecture_pipeline.mmd  constitutive_hierarchy.mmd  defect_insertion_workflow.mmd  digital_twin_bayesian_loop.mmd  multipass_welding_sequence.mmd  neural_operator_pipeline.mmd  solver_backend_hierarchy.mmd
docs/guides/: examples.md
docs/tutorials/: 01_yaml_analysis.md  02_parametric_study.md  03_custom_postprocessing.md
examples/: butt_weld_fatigue.py  butt_weld_fatigue.yaml  creep_norton_bailey.py  digital_twin_update.py  fillet_t_joint.py  fillet_t_joint.yaml  ml_fatigue_predictor.py  probabilistic_life.py  pwht_comparison.py  thermal_goldak.py
scripts/: build_docs_assets.py  generate_docs_animations.py  generate_docs_concept_images.py  generate_docs_images.py  generate_docs_mermaid.py
src/feaweld/: __init__.py  cli.py
src/feaweld/core/: loads.py  logging.py  materials.py  memmap.py  resources.py  signals.py  types.py  watcher.py
src/feaweld/data/: __init__.py  cache.py  cct.py  filler_metals.py  registry.py  residual_stress.py  scf.py  weld_efficiency.py
src/feaweld/data/cct/: steel_grades.json
src/feaweld/data/defect_acceptance/: asme_bpvc_ix.json  aws_d1_1_table61.json  iso5817.json
src/feaweld/data/defect_fat/: bs7910_annex_f.json
src/feaweld/data/filler_metals/: aws_a5.json
src/feaweld/data/materials/: 2205.yaml  2507.yaml  304L.yaml  304SS.yaml  316.yaml  316L.yaml  321.yaml  347.yaml  410.yaml  4130.yaml  4140.yaml  4340.yaml  5083_H116.yaml  5086_H34.yaml  6061_T6.yaml  8620.yaml  A283_C.yaml  A36.yaml  A387_11.yaml  A387_22.yaml  A514.yaml  A516_55.yaml  A516_70.yaml  A517.yaml  A572_50.yaml  A572_65.yaml  A992.yaml  E110XX.yaml  E308L.yaml  E316L.yaml  E70XX.yaml  E80XX.yaml  E90XX.yaml  ER70S_6.yaml  HY_80.yaml  S235.yaml  S275.yaml  S355.yaml  S460.yaml  S690.yaml  (+9 more)
src/feaweld/data/multipass_sequences/: v_groove_3pass.json
src/feaweld/data/residual_stress/: profiles.json
src/feaweld/data/scf/: parametric_coefficients.json
src/feaweld/data/sn_curves/: iiw.yaml  iiw_weld_details.json  weld_details.py
src/feaweld/data/weld_efficiency/: tables.json
src/feaweld/defects/: __init__.py  insertion.py  knockdown.py  loader.py  population.py  types.py
src/feaweld/digital_twin/: __init__.py  assimilation.py  bayesian.py  crack_monitor.py  daemon.py  dashboard.py  flows.py  ingest.py  observation_operators.py  sif_interpolator.py
src/feaweld/digital_twin/static/: index.html
src/feaweld/fatigue/: __init__.py  knockdown.py  miner.py  rainflow.py  sn_curves.py
src/feaweld/fracture/: __init__.py  ctod.py  j_integral.py  phase_field.py  types.py
src/feaweld/geometry/: __init__.py  fastener_welds.py  groove.py  joints.py  joints3d.py  multipass.py  notch.py  spline_joints.py  weld_path.py
src/feaweld/mesh/: __init__.py  convert.py  generator.py  quality.py
src/feaweld/ml/: bayesian_surrogate.py  features.py  models.py  transfer.py
src/feaweld/multiscale/: fft_homogenization.py  macro.py  meso.py  micro.py  pipeline.py
src/feaweld/pipeline/: __init__.py  active_learning.py  checkpoint.py  comparison.py  dag.py  distributed.py  hooks.py  ipc.py  queue.py  report.py  study.py  workflow.py
src/feaweld/postprocess/: __init__.py  blodgett.py  dong.py  hotspot.py  linearization.py  multiaxial.py  nominal.py  notch_stress.py  path_extraction.py  sed.py  volumetric_sed.py
src/feaweld/probabilistic/: distributions.py  monte_carlo.py  sensitivity.py
src/feaweld/singularity/: __init__.py  convergence.py  detection.py  submodeling.py
src/feaweld/solver/: __init__.py  backend.py  calculix_backend.py  constitutive.py  creep.py  fenics_backend.py  jax_backend.py  jax_constitutive.py  jax_crystal_plasticity.py  mechanical.py  multipass_thermal.py  neural_backend.py  neural_training.py  thermal.py  thermomechanical.py
src/feaweld/visualization/: __init__.py  annotations.py  comparison.py  dashboard.py  enhanced_3d.py  export.py  fatigue_maps.py  fatigue_plots.py  plotly_figures.py  plots_2d.py  report_figures.py  stress_plots.py  theme.py  thermal_plots.py
tests/: conftest.py  test_active_learning.py  test_bayesian_surrogate.py  test_blodgett.py  test_calculix_backend.py  test_cli_commands.py  test_cli_defects.py  test_ctod.py  test_defect_data_files.py  test_defect_insertion.py  test_defect_knockdown.py  test_defect_knockdown_aggregate.py  test_defect_population.py  test_defect_types.py  test_digital_twin.py  test_docs_assets.py  test_dong.py  test_enkf.py  test_enkf_multidim.py  test_error_paths.py  test_fastener_welds.py  test_fatigue.py  test_fft_homogenization.py  test_geometry.py  test_groove_profiles.py  test_hotspot.py  test_hotspot_along_path.py  test_j_integral_2d.py  test_j_integral_3d.py  test_jax_backend.py  test_jax_crystal_plasticity.py  test_joints3d.py  test_linearization.py  test_mesh.py  test_ml.py  test_multiaxial_fatigue.py  test_multipass_geometry.py  test_multipass_sequence.py  test_multipass_thermal.py  test_multiscale.py  (+22 more)
tests/benchmarks/: conftest.py  test_solver_bench.py
