[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feaweld"
version = "0.1.0"
description = "Finite Element Analysis for weld joint stress, fatigue, and structural integrity"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "meshio>=5.3",
    "gmsh>=4.11",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
fenics = [
    "fenics-dolfinx>=0.7",
    "fenics-ufl>=2023.2",
    "fenics-basix>=0.7",
]
calculix = [
    "pygccx>=0.1",
]
viz = [
    "pyvista>=0.40",
    "vtk>=9.2",
    "matplotlib>=3.7",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
]
digital-twin = [
    "emcee>=3.1",
    "paho-mqtt>=2.0",
    "asyncua>=1.0",
    "websockets>=12.0",
]
jax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]
jax-gpu = [
    "jax[cuda12_pip]>=0.4.20",
]
flax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
]
neural = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "msgpack>=1.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
    "pillow>=10.0",
]
all = [
    "feaweld[fenics,calculix,viz,ml,digital-twin]",
]
journal = [
    "systemd-python>=235",
]
daemon = [
    "watchdog>=3.0",
    "systemd-python>=235",
]
distributed = [
    "dask[distributed]>=2024.1",
]
export = [
    "pyarrow>=14.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.scripts]
feaweld = "feaweld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feaweld"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_fenics: tests requiring FEniCSx installation",
    "requires_calculix: tests requiring CalculiX installation",
    "requires_gmsh: tests requiring Gmsh installation",
    "requires_jax: tests requiring JAX installation",
    "requires_jax_gpu: tests requiring a JAX GPU backend",
    "requires_flax: tests requiring Flax/Optax",
    "requires_numpyro: tests requiring NumPyro",
    "slow: tests that take more than 10 seconds",
    "slow_gpu: GPU-intensive tests (opt-in)",
    "benchmark: performance benchmark tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "C90",    # mccabe complexity
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "N802",   # function name should be lowercase (FEA convention: E, nu, etc.)
    "N803",   # argument name should be lowercase (same reason)
    "N806",   # variable in function should be lowercase
    "UP007",  # Use X | Y for union (keep Optional[] where it remains)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["feaweld"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ALL"]
"tests/*" = ["B011", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "dolfinx.*",
    "fenics_ufl.*",
    "basix.*",
    "pygccx.*",
    "gmsh.*",
    "pyvista.*",
    "vtk.*",
    "emcee.*",
    "paho.*",
    "asyncua.*",
    "xgboost.*",
    "flax.*",
    "optax.*",
    "jax.*",
    "jaxlib.*",
    "numpyro.*",
    "msgpack.*",
    "meshio.*",
    "watchdog.*",
    "systemd.*",
    "dask.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "feaweld.solver.fenics_backend",
    "feaweld.solver.calculix_backend",
    "feaweld.digital_twin.*",
    "feaweld.visualization.*",
]
disallow_untyped_defs = false
