[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feaweld"
version = "0.1.0"
description = "Finite Element Analysis for weld joint stress, fatigue, and structural integrity"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "meshio>=5.3",
    "gmsh>=4.11",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
fenics = [
    "fenics-dolfinx>=0.7",
    "fenics-ufl>=2023.2",
    "fenics-basix>=0.7",
]
calculix = [
    "pygccx>=0.1",
]
viz = [
    "pyvista>=0.40",
    "vtk>=9.2",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.0",
    "mkdocs-gen-files>=0.5",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "joblib>=1.3",
]
digital-twin = [
    "emcee>=3.1",
    "paho-mqtt>=2.0",
    "asyncua>=1.0",
    "websockets>=12.0",
]
all = [
    "feaweld[fenics,calculix,viz,ml,digital-twin]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
feaweld = "feaweld.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feaweld"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_fenics: tests requiring FEniCSx installation",
    "requires_calculix: tests requiring CalculiX installation",
    "requires_gmsh: tests requiring Gmsh installation",
    "slow: tests that take more than 10 seconds",
]
